# tensor_graphs

./: .gitignore  0.json  1.json  2.json  3.json  4.json  CLAUDE.md  LICENSE.md  PLAN.md  README.md  TODO.md  analyze_performance.py  apply_edits.py  apply_patch.py  benchmarks.db  build.py  check.bat  check.py  check.sh  check_registry.py  decode.py  diff.txt  explore.py  extraction.txt  extraction_v0.py  extraction_v1.py  extraction_v2.py  extraction_v3.py  extraction_v4.py  extraction_v5.py  low_level_todo.md  make_test_files.py  notes.md  patch.json  plan.txt  pyproject.toml  read_benchmarks.py  replace.py  repomix-output.txt  reproduce_slowness.py  (+8 more)
egraph_viewer/: app.py
egraph_viewer/templates/: index.html
examples/: demo_autocast.py  flux-klein-4b.py  gemma-3-270m-cpp.py  gemma-3-270m.py
kernel_bench/: agent.py  app.py  jobs.py
kernel_bench/templates/: index.html
resources/: gemma-3-270m.py
tensor_graphs/: __init__.py  config.py  session.py
tensor_graphs/backend/: __init__.py  cache.py  executor.py  memory.py  reference.py  registry.py  smart_executor.py  static_executor.py  verifier.py
tensor_graphs/benchmark/: data_gen.py  db.py  env.py  profiler.py  (+1 more)
tensor_graphs_cpp/: bench.cpp  bindings.cpp  core.hpp  ideal.txt  main.cpp  migration_notes.txt  test.cpp  todo.txt
tests/: test_atomic_ops.py  test_causal_mask.py  test_dispatch.py  test_execution.py  test_fusion.py  test_graph_build.py  test_incremental_symbolic.py  test_kernel_correctness.py  test_kernel_integrity.py  test_multi_path.py  test_op_fusion.py  test_phase2.py  test_static_execution.py
(+405 files in other folders)
