[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tensor_graphs"
version = "0.1.0"
description = "A graph-based tensor library for deep learning optimization and symbolic analysis."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Aaron Belikoff", email = "aaronbelikoff@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "tqdm",
    "tokenizers",
    "huggingface_hub",
    "torch",
    "safetensors",
    "hf_xet",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tensor_graphs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=tensor_graphs"